--- a/public/index.html
+++ b/public/index.html
@@ -13,67 +13,43 @@
   <div class="form-group">
     <textarea id="prompt" rows="4" placeholder="prompt"></textarea>
   </div>
-  <div class="form-group">
-    <select id="style">
-      <option value="vivid">Vivid</option>
-      <option value="natural">Natural</option>
-    </select>
+  <div class="form-group-wrapper">
+    <div class="form-group">
+      <select id="style">
+        <option value="vivid">Vivid Style</option>
+        <option value="natural">Natural Style</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <select id="resolution">
+        <option value="1024x1024">1024x1024</option>
+        <option value="1024x1792">1024x1792</option>
+        <option value="1792x1024">1792x1024</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <select id="quality">
+        <option value="standard">Standard Quality</option>
+        <option value="hd">HD Quality</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <select id="numImages">
+        <option value="1">1 image</option>
+        <option value="2">2 images</option>
+        <option value="4">4 images</option>
+        <option value="6">6 images</option>
+      </select>
+    </div>
   </div>
-  <div class="form-group">
-    <select id="resolution">
-      <option value="1024x1024">1024x1024</option>
-      <option value="1024x1792">1024x1792</option>
-      <option value="1792x1024">1792x1024</option>
-    </select>
-  </div>
-  <button id="generate">Generate</button>
+  <button id="generate">
+    &#9658;
+  </button>
+
   <div class="images" id="images"></div>
 </div>
 
-<script>
-document.getElementById('generate').addEventListener('click', function() {
-  var prompt = document.getElementById('prompt').value;
-  var style = document.getElementById('style').value;
-  var resolution = document.getElementById('resolution').value;
-
-  var button = document.getElementById('generate');
-  button.disabled = true;
-  button.classList.add('spinner');
-
-  if (!prompt) {
-    alert('Please enter a prompt.');
-    return;
-  }
-
-  // Make parallel calls to the server
-  [1, 2].forEach(function() {
-    fetch('http://localhost:3000/generate-image', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ prompt, style, resolution })
-    })
-    .then(response => response.json())
-    .then(data => {
-      button.disabled = false;
-      button.classList.remove('spinner');
-
-      var imageWrapper = document.createElement('div');
-      imageWrapper.classList.add('image-wrapper');
-      imageWrapper.innerHTML = `
-        <img src="${data.imageUrl}" alt="">
-        <p>${prompt}</p>
-      `;
-      document.getElementById('images').appendChild(imageWrapper);
-
-    })
-    .catch(error => {
-      console.error('Error:', error);
-    });
-  });
-});
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
