Better resolution box UI

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     </div>
     <div class="form-group">
       <select id="resolution">
-        <option value="1024x1024">1024x1024</option>
-        <option value="1024x1792">1024x1792</option>
-        <option value="1792x1024">1792x1024</option>
+        <option value="1024x1024">⬚ Square</option> <!-- Unicode Black Square -->
+        <option value="1024x1792">| &nbsp;Vertical</option> <!-- Unicode Black Large Square -->
+        <option value="1792x1024">- Horizontal</option> <!-- Unicode Black Medium Square -->
       </select>
     </div>
     <div class="form-group">
