--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <textarea id="prompt" rows="4" placeholder="prompt"></textarea>
   </div>
   <div class="form-group-wrapper">
+
+    <div class="form-group">
+      <input type="checkbox" id="useExactPrompt" name="useExactPrompt" value="useExactPrompt">
+      <label for="useExactPrompt">Exact prompt</label>
+    </div>
     <div class="form-group">
       <select id="style">
         <option value="vivid">Vivid Style</option>
@@ -22,9 +27,9 @@
     </div>
     <div class="form-group">
       <select id="resolution">
-        <option value="1024x1024">⬚ Square</option> <!-- Unicode Black Square -->
-        <option value="1024x1792">| &nbsp;Vertical</option> <!-- Unicode Black Large Square -->
-        <option value="1792x1024">- Horizontal</option> <!-- Unicode Black Medium Square -->
+        <option value="1024x1024">⬚ Square</option>
+        <option value="1792x1024">= Horizontal</option>
+        <option value="1024x1792">|| Vertical</option>
       </select>
     </div>
     <div class="form-group">
@@ -37,10 +42,13 @@
       <select id="numImages">
         <option value="1">1 image</option>
         <option value="2">2 images</option>
+        <option value="2">3 images</option>
         <option value="4">4 images</option>
+        <option value="5">5 images</option>
         <option value="6">6 images</option>
       </select>
     </div>
+
   </div>
   <button id="generate">
     &#9658;
