--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <div class="form-group">
       <input type="checkbox" id="useExactPrompt" name="useExactPrompt" value="useExactPrompt">
-      <label for="useExactPrompt">Exact prompt</label>
+      <label for="useExactPrompt">~Exact prompt</label>
     </div>
     <div class="form-group">
       <select id="style">
