--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<h1>Power Dall-E</h1>
+
 <div class="wrapper">
   <div class="form-group">
     <textarea id="prompt" rows="4" placeholder="prompt"></textarea>
@@ -55,6 +57,7 @@
   </button>
 
   <div class="images" id="images"></div>
+
 </div>
 
 <script src="script.js"></script>
