Switching from filesystem to SQLite for storage

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Power Dall-E</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 <body>
 
@@ -27,7 +28,7 @@
       </select>
     </div>
     <div class="form-group">
-      <select id="resolution">
+      <select id="size">
         <option value="1024x1024">⬚ Square</option>
         <option value="1792x1024">= Horizontal</option>
         <option value="1024x1792">|| Vertical</option>
