Add link to monitor price

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
 
   <div class="images" id="images"></div>
 
+  <div class="footnote"><a href="https://platform.openai.com/usage" target="_blank">Monitor your price</a>.</div>
+
 </div>
 
 <script src="script.js"></script>
