Better securing pricing link via norefferer

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
   <div class="images" id="images"></div>
 
-  <div class="footnote"><a href="https://platform.openai.com/usage" target="_blank">Monitor your price</a>.</div>
+  <div class="footnote"><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">Monitor your price</a>.</div>
 
 </div>
 
