Add link to pricing table

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,11 @@
 
   <div class="images" id="images"></div>
 
-  <div class="footnote"><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">Monitor your price</a>.</div>
+  <div class="footnote">
+    <a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">Monitor your costs</a> |
+    <a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">Pricing table</a> |
+    <a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">This project on Github</a>
+  </div>
 
 </div>
 
