Add copy prompt buttons

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,12 @@
 
 <div class="wrapper">
   <div class="form-group">
-    <textarea id="prompt" rows="4" placeholder="prompt"></textarea>
+    <textarea id="prompt" rows="8" placeholder="prompt"></textarea>
   </div>
   <div class="form-group-wrapper">
 
     <div class="form-group">
-      <input type="checkbox" id="useExactPrompt" name="useExactPrompt" value="useExactPrompt">
-      <label for="useExactPrompt">~Exact prompt</label>
+      <input type="checkbox" id="useExactPrompt" name="useExactPrompt" value="useExactPrompt"><label for="useExactPrompt">~Exact prompt</label>
     </div>
     <div class="form-group">
       <select id="style">
