--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,10 @@
 
   <div class="images" id="images"></div>
 
-  <div class="footnote">
-    <a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">Monitor your costs</a> |
-    <a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">Pricing table</a> |
-    <a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">This project on Github</a>
+  <div class="extraLinks">
+    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ Costs</a></p>
+    <p><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ Pricing</a></p>
+    <p><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 About</a></p>
   </div>
 
 </div>
