--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
   <div class="images" id="images"></div>
 
   <div class="extraLinks">
-    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ Costs</a></p>
+    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ Usage</a></p>
     <p><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ Pricing</a></p>
     <p><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 About</a></p>
   </div>
