Integrated Prompt Inspirer

--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,10 @@
   <div class="images" id="images"></div>
 
   <div class="extraLinks">
-    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ Usage</a></p>
-    <p><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ Pricing</a></p>
-    <p><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 About</a></p>
+    <p><a href="javascript:togglePromptInspirer()" id="inspirerLink">💡 <span>Prompt Inspirer</span></a></p>
+    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ <span>Usage</span></a></p>
+    <p><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ <span>Pricing</span></a></p>
+    <p><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 <span>About</span></a></p>
   </div>
 
 </div>
