Add close button to Inspirer window, and let Esc close it

--- a/public/inspirer/index.html
+++ b/public/inspirer/index.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<div id="close-button-if-iframed" onclick="closeIfIframed()">&times;</div>
+<div id="close-button-if-iframed">&times;</div>
 
 <script src="categories.js?v=11"></script>
 <script src="script.js?v=11"></script>
