--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <option value="hd">HD Quality</option>
       </select>
     </div>
-    <div class="form-group">
+    <div class="form-group form-group-numImages">
       <select id="numImages">
         <option value="1">1 image</option>
         <option value="2">2 images</option>
