--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,10 @@
   <div class="images" id="images"></div>
 
   <div class="extraLinks">
-    <p><div id="inspirerLink" class="pseudoLink" onclick="togglePromptInspirer(event)">💡 <span>Prompt Inspirer</span></div></p>
-    <p><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ <span>Usage</span></a></p>
-    <p><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ <span>Pricing</span></a></p>
-    <p><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 <span>About</span></a></p>
+    <div class="extraLink"><div id="inspirerLink" class="pseudoLink" onclick="togglePromptInspirer(event)">💡 <span>Prompt Inspirer</span></div></div>
+    <div class="extraLink"><a href="https://platform.openai.com/usage" target="_blank" rel="noreferrer noopener">$ <span>Usage</span></a></div>
+    <div class="extraLink"><a href="https://openai.com/pricing" target="_blank" rel="noreferrer noopener">$ <span>Pricing</span></a></div>
+    <div class="extraLink"><a href="https://github.com/JPhilipp/powerdalle" target="_blank" rel="noreferrer noopener">🛈 <span>About</span></a></div>
   </div>
 
 </div>
